logging/templates/elasticsearch-data-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: es-logging-data
  labels:
    component: es-logging
    role: data
spec:
  selector:
    matchLabels:
      component: es-logging
      role: data
  template:
    metadata:
      labels:
        component: es-logging
        role: data
    spec:
      serviceAccount: es-logging
      containers:
      - name: es-logging-data
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: quay.io/cafebazaar/elasticsearch-cluster-kubernetes
        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage
      volumes:
          - emptyDir:
              medium: ""
            name: "storage"
