logging/templates/elasticsearch-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
spec:
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      serviceAccount: elasticsearch
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: quay.io/pires/docker-elasticsearch-kubernetes:1.7.1-4
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: https
        volumeMounts:
        - mountPath: /data
          name: storage
      volumes:
      - name: storage
