logging/templates/kibana-ds.yaml
apiVersion: extension/v1beta1
kind: DaemonSet
metadata:
  name: logging-kibana
  labels:
    k8s-app: logging-kibana
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    k8s-app: logging-kibana
    version: v1
  template:
    metadata:
      labels:
        k8s-app: logging-kibana
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - name: logging-kibana
        image: gcr.io/google_containers/kibana:1.3
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: http-ui
