logging/templates/elasticsearch-discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-logging-discovery
  labels:
    component: es-logging
    role: master
spec:
  selector:
    component: es-logging
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
