logging/templates/elasticsearch-logging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  labels:
    component: es-logging
    role: client
spec:
  selector:
    component: es-logging
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
