logging/templates/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logging-kibana
  labels:
    k8s-app: logging-kibana
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    targetPort: http-ui
  selector:
    k8s-app: logging-kibana
